<resources>
    <string name="app_name">homepage</string>
    <string name="Net_ID">Net-ID</string>
    <string name="Login">Login</string>
    <string name="Sign_Up">SignUp</string>
    <string name="Not_a_mem_message">Not a Member?</string>
    <string name="CyRUN">CyRUN</string>
    <string name="Password">Password</string>

    <string name="Clydes">Clydes</string>
    <string name="Convos">Convos</string>
    <string name="UDCC">UDCC</string>
    <string name="Favorite_picks">Favorites Picks @ ISU</string>
    <string name="HomePage">CyRUN HomePage</string>
    <string name="Clydes_HomePage">Clydes HomePage</string>
    <string name="Favorite_picks_at_Clydes">Favorite Picks @ Clydes</string>
    <string name="Cheese_Burger">Cheese Burger</string>
    <string name="Pizza">Cheese Pizza</string>
    <string name="Pasta">Pasta</string>

    <string name="User_ID">User ID</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="User_Name">User Name</string>
    <string name="Password1">Password</string>
    <string name="ISU_ID">ISU_ID</string>
    <string name="Routing_Number">Routing Number</string>
    <string name="Account_Number">Account Number</string>
    <string name="UserNet_ID">Net ID</string>
    <string name="Chat">Chat</string>
    <string name="Runner">Would you like to become a runner?</string>
    <string name="Runners">Runner HomePage</string>
    <string name="Runners_Page">Runners SignUp Page</string>
    <string name="Hawthorn_Page">Hawthorn</string>
    <string name="Runnerss">Runner SignUp</string>

    <string name="CartText">Cart</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="Items">Items</string>
    <string name="Total">Total</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Fees">Fees and Estimated Taxes</string>
    <string name="Discount">Discount</string>
    <string name="Delivery">Delivery Fee</string>
    <string name="GrandTotal">Total</string>
    <string name="Runner_Page">Runners HomePage</string>
    <string name="Run_Page">Pending Orders Page</string>
    <string name="Preview_Page">Order Preview Page</string>
    <string name="PickUp">Pick Up Order</string>
    <string name="Name">Name:</string>
    <string name="Order">Full Order:</string>
    <string name="Location">Location of Order:</string>
    <string name="Totals">Final Total:</string>


    <string name="SouthSideMarket">South Side Market</string>
    <string name="West_Side">West Side Market</string>
    <string name="Pending_Orders">View Pending Orders?</string>
    <string name="Orders">Orders</string>
    <string name="Refresh">Refresh</string>



</resources>
