<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignUpActivity">

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="131dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="609dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/Sign_Up"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="106dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="584dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cyrun" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="635dp"
        android:background="@color/colorAccent"
        android:text="CyRun Signup Page"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name_etext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="526dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/First_Name"
        android:inputType="textMultiLine"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name_etext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="472dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Last_Name"
        android:inputType="textMultiLine"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name_etext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="419dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/User_Name"
        android:inputType="textMultiLine"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_etext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="365dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/routing_num_etext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="252dp"
        android:ems="10"
        android:hint="@string/Routing_Number"
        android:inputType="number"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/netid_etext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="547dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="139dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/UserNet_ID"
        android:inputType="textMultiLine"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/isu_id_etext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="309dp"
        android:ems="10"
        android:hint="@string/ISU_ID"
        android:inputType="number"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account_num_etext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="487dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="199dp"
        android:ems="10"
        android:hint="@string/Account_Number"
        android:inputType="number"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Runner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="619dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Runner"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>